--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'England -- Social life and customs -- 19th century -- Fiction'
 - !lcsh 'Young women -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: The Grim House
 url: http://www.gutenberg.org/ebooks/43878
